src/main/java/com/example/autorepairshop/error/EndDateBeforeDateStartsException.java
package com.example.autorepairshop.error;

public class EndDateBeforeDateStartsException extends RuntimeException {
    public EndDateBeforeDateStartsException(String message) {
        super(message);
    }
}
